# ChangeLog for net-wireless/i2400m-fw
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/i2400m-fw/Attic/ChangeLog,v 1.3 2012/01/23 17:03:18 tomka Exp $

  23 Jan 2012; Thomas Kahle <tomka@gentoo.org> i2400m-fw-1.5.0.ebuild:
  x86 stable per bug 386121

  11 Jan 2012; Agostino Sarubbo <ago@gentoo.org> i2400m-fw-1.5.0.ebuild:
  Stable for AMD64, wrt bug #386121

*i2400m-fw-1.5.0 (24 Jul 2010)

  24 Jul 2010; Alexey Shvetsov <alexxy@gentoo.org> +i2400m-fw-1.5.0.ebuild,
  +metadata.xml:
  Initial import. This fixes bug #266893
