@@ -1,14 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST i2400m-fw-1.5.0.tar.bz2 1603763 RMD160 07b1de64dba0dc710fb96c2735e60dae1490cfe6 SHA1 6d571f71174d526e637cf901f3374371131a60e8 SHA256 edcb7c5322c0185173a2dc79b3df4bc74964edfa741ebf9a09cd70a32d758c3d
-EBUILD i2400m-fw-1.5.0.ebuild 714 RMD160 07e81aa320a3a5099e29beb430a541cd52284176 SHA1 e28172e92fc084119d749fbc0e8b1131af87d764 SHA256 12278e36cf5ec13681d66947a9b10ed32f727f804d5b4a94ef2a5a89ed383513
-MISC ChangeLog 593 RMD160 e1e264bdcb8a29538dc3cec58934f5ac0e9177c6 SHA1 163756f76a79983d9878d4415d8352f84ff83fef SHA256 96c32bbbe4bb905909ed4dbc6d1629ed4dfee50a21e0d4591f650c47eef25e6f
-MISC metadata.xml 230 RMD160 2e91fc6ee1373a5d1ef668ff8fb2040ebe7494b7 SHA1 97538bbb3bfd7ba140085c08aa3bb4df1aacc5fc SHA256 d0e87f008313f44fc38e87c7b3a6a3680180a1cefee639fb3091395608459ed0
+DIST i2400m-fw-1.5.0.tar.bz2 1603763 SHA256 edcb7c5322c0185173a2dc79b3df4bc74964edfa741ebf9a09cd70a32d758c3d SHA512 1e8423e256870e17585931f8d3e9dffe3a88c32671bb4768ec0f5a0c006cb06f9f2ca5868cf7f3053e91cc11df75428ae38d17f45cc0bee220e599d2b20d99e7 WHIRLPOOL bfb5454b627605f0bc5f064f3486c9518547cc406e6889d2607017058160303c9722f23dcfb872d3ba374390d8c42aaa8c545d8a593462d4509cb0a43c4fd7c4
+EBUILD i2400m-fw-1.5.0.ebuild 689 SHA256 f008d86f63bd75a11b25cb25448df88bc0bf1eceb4a99b132e386e5e98d454e7 SHA512 7bdb7f02617231188abc3ea7aef25d45e8e45f9b05fc347780cb874717254171bb003cdc42d16d9c912fe1beecda674e66e501246eef4641865fb3af6e452a21 WHIRLPOOL 457a84dc0697ec0930705890ad8735328c4a12ed3ceb30d136e047294a446198a8a1281e18aa042991651d82b399ef242d98d0fdc557790a765468b0ce94574d
+MISC ChangeLog 718 SHA256 5b41b683843f30c058715348fd896c0ee9a64ef232ff66afd5de7ca89038c688 SHA512 cea3836b888cb93783561860cc6911d8a9b5c6c63d7faea137ef8be46d0605a7d63d7ac97bd60026826ca143c97fccdbc55f9333e7a34a3764bee853dc470608 WHIRLPOOL 1c6d1c75f1d1298b9a16705d521136b628e2c782f73f4d78eb4457e4a660d1b1ba258a406af09df3ac60ecea8aa6639d6774162ec31d44f5d997ca9396f841f6
+MISC metadata.xml 230 SHA256 d0e87f008313f44fc38e87c7b3a6a3680180a1cefee639fb3091395608459ed0 SHA512 53d7ec5807092af440735d3c5e2f6f2b77565b9ca203b9926e4c61dfd8d14291ea2b9b0ec2fe653300b112250b775de5039e65c4a5d4e5e7279f3bf4ab427d9e WHIRLPOOL d02d8aa99787d4759b7b053e8f3872df879938c7d0c6cb4f0d3d78ca67bab998b1d668657b667752c5a78913f650b790a081d259ef0e0bfae81717677a9aee85
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAk8dktsACgkQodBTJSDyo65ucwD+LMfqLPq/KQHBUOcndXZpIsKa
-Uo/W+kld7RmXOub+T5YA/3NumD7zmoTeB1a/JZ52PLrfK8a4/FVJ97KSBZkDOT68
-=sZ74
+iQEcBAEBCAAGBQJQxwRtAAoJEEdUh39IaPFNYPsH/jtO0hjPn13KEJfvl+cIN7tI
+HuSBFCiZe1b1A1LNByM9y0A36KDhK3ki99fSAGmu0AX2vfPzlehPOnnAab0BDPC/
+gu4bPfTsSXc6y6NffB+2FbkoqJkAoTK+JTnH/aUGWlO5NMY5QEPJuVl0YOBJ699C
+TASW04/07t8S/hV2bVt7zA/+0M/uSCEUENjLdnHOKv1zwNJ/RT/gGtUPoKMxf5Tv
+hgJm8pD1OtpI3cs79eiis1vuJGeAFNy7cBB54rqpvt1qoKf3bWvqI3cm9amHyCia
+v0imyh6Zhq2gwU0/TZ9LCa2DQrLkJOZ0crZJzjDHOr34S6qTLDTMX5jeGVWkynM=
+=Q2JQ
 -----END PGP SIGNATURE-----
