@@ -1,8 +1,8 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/i2400m-fw/Attic/i2400m-fw-1.5.0.ebuild,v 1.3 2012/01/23 17:03:18 tomka Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/i2400m-fw/Attic/i2400m-fw-1.5.0.ebuild,v 1.4 2012/12/11 10:01:16 ssuominen Exp $
 
-EAPI="3"
+EAPI=5
 MY_PV=${PV%.0}
 
 DESCRIPTION="Intel (R) WiMAX 5150/5350/6250 Firmware"
@@ -14,12 +14,12 @@ SLOT="0"
 KEYWORDS="amd64 x86"
 IUSE=""
 
-DEPEND="|| ( >=sys-fs/udev-096 >=sys-apps/hotplug-20040923 )"
+DEPEND="|| ( virtual/udev >=sys-apps/hotplug-20040923 )"
 
 src_install() {
 	insinto /lib/firmware
-	for x in i2400m i6050 ; do
-		doins "${S}/${x}-fw-usb-${MY_PV}.sbcf" || die
+	for x in i2400m i6050; do
+		doins ${x}-fw-usb-${MY_PV}.sbcf
 	done
-	dodoc README || die
+	dodoc README
 }
