@@ -1,6 +1,9 @@
 # ChangeLog for net-wireless/i2400m-fw
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-wireless/i2400m-fw/Attic/ChangeLog,v 1.3 2012/01/23 17:03:18 tomka Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-wireless/i2400m-fw/Attic/ChangeLog,v 1.4 2012/12/11 10:01:16 ssuominen Exp $
+
+  11 Dec 2012; Samuli Suominen <ssuominen@gentoo.org> i2400m-fw-1.5.0.ebuild:
+  Use virtual/udev instead of sys-fs/udev
 
   23 Jan 2012; Thomas Kahle <tomka@gentoo.org> i2400m-fw-1.5.0.ebuild:
   x86 stable per bug 386121
